--- a/about/index.html
+++ b/about/index.html
@@ -197,12 +197,19 @@
   </div>
   <!--intro-->
   <div class="blankHXS"></div>
+
+  <!-- Arrow -->
   <div class="wrapper">
-    <div class="element">
-      <p class="tArrow">Method &#38; Importance <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
+    <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+      <div class="Grid-cell">
+        <div class="element">
+          <h2 class="tArrow">Method &#38; Importance <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+          </h2>
+        </div>
+      </div>
     </div>
   </div>
-
+  <!-- Arrow -->
   <div class="blankHXS"></div>
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-2">
@@ -310,11 +317,18 @@
   <div class="blankHM"></div>
   <!-- My Journey -->
 
+
+  <!-- Arrow -->
   <div class="wrapper">
-    <div class="element">
-      <p class="tArrow">My Journey <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
+    <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+      <div class="Grid-cell">
+        <div class="element">
+          <h2 class="tArrow">My Journey <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
+        </div>
+      </div>
     </div>
   </div>
+  <!-- Arrow -->
   <div class="wrapper">
     <div class="Grid Grid--full marginResponsiveGrid">
       <div class="Grid-cell">
@@ -381,11 +395,18 @@
   <div class="blankHM"></div>
 
   <!-- About me -->
+
+  <!-- Arrow -->
   <div class="wrapper">
-    <div class="element">
-      <p class="tArrow">About Me <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
+    <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+      <div class="Grid-cell">
+        <div class="element">
+          <h2 class="tArrow">About Me<img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
+        </div>
+      </div>
     </div>
   </div>
+  <!-- Arrow -->
   <div class="blankHS"></div>
 
   <div class="wrapper">
@@ -563,11 +584,15 @@
   <!-- About me -->
   <div class="blankHM"></div>
 
+
   <!-- Arrow -->
   <div class="wrapper">
-    <div class="element">
-      <h2 class="tArrow">Skills & Experiences <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
-      </h2>
+    <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+      <div class="Grid-cell">
+        <div class="element">
+          <h2 class="tArrow">Skills & Experiences <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
+        </div>
+      </div>
     </div>
   </div>
   <!-- Arrow -->
