--- a/architecture/index.html
+++ b/architecture/index.html
@@ -182,12 +182,17 @@
   <!--intro-->
   <div class="blankHS"></div>
 
-
+  <!-- Arrow -->
   <div class="wrapper">
-    <div class="element">
-      <p class="tArrow">Selected Projects <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
+    <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+      <div class="Grid-cell">
+        <div class="element">
+          <h2 class="tArrow">Selected Projects <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
+        </div>
+      </div>
     </div>
   </div>
+  <!-- Arrow -->
   <div class="blankHXS"></div>
   <!-- RECREATION COMMONS-->
   <div class="wrapper">
@@ -404,11 +409,15 @@
   <!-- RECOVERY OF RIVER EDGES & Narrow strips  -->
   <div class="blankHM"></div>
 
+
   <!-- Arrow -->
   <div class="wrapper">
-    <div class="element">
-      <h2 class="tArrow">Skills & Experiences <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
-      </h2>
+    <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+      <div class="Grid-cell">
+        <div class="element">
+          <h2 class="tArrow">Skills & Experiences <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
+        </div>
+      </div>
     </div>
   </div>
   <!-- Arrow -->
