--- a/glorify/index.html
+++ b/glorify/index.html
@@ -20,8 +20,7 @@
     content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
   <meta property="og:url" content="https://vickywang.me/glorify">
   <meta property="og:site_name" content="Vicky's Website">
-  <meta property="og:image"
-    content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
+  <meta property="og:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
@@ -29,8 +28,7 @@
   <meta property="twitter:title" content="Enhancing Community Engagement in Glorify - Vicky Wang">
   <meta property="twitter:description"
     content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
-  <meta property="twitter:image"
-    content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
+  <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
 
   <!-- favicon -->
 
@@ -366,8 +364,8 @@
       </div>
     </div>
     <!-- Slideshow Title -->
-    <div class="TBcarousel Grid--center Grid Grid--full marginResponsiveGrid u-textCenter" aria-label="TBcarousel" Tabindex="0"
-      id="TBcarousel1">
+    <div class="TBcarousel Grid--center Grid Grid--full marginResponsiveGrid u-textCenter" aria-label="TBcarousel"
+      Tabindex="0" id="TBcarousel1">
       <div class="TBslides">
         <div class="TBslidesItem slide-1" id="slide-1" aria-label="slide 1 of 5" tabindex="0">
           <div class="Grid Grid--full marginResponsiveGrid wrapper">
@@ -564,54 +562,58 @@
   <!-- LRcarousel-->
   <main>
     <div class="blankHS"></div>
-    <div class="Grid Grid--full marginResponsiveGrid wrapper">
-      <div class="Grid-cell">
-        <h1 class="Grid Grid--center"> <span class="specialTextL">Case study</span><img class="moveUpDown widthLogo"
-            src="../icon/arrow-down.svg" alt="Scroll down">
-        </h1>
-      </div>
-      <div class="paddingM">
-        <img class="modal-target" src="Research_Diagram.svg" alt="Desgin Thinking Process">
-      </div>
-
-
-      <div class="paddingM">
-        <div class="rowToColumn cardGlorify shadowBox centerVer">
-          <div class="widthMax paddingM">
-            <h4> To address the current lack of social and community features, I am focused on enhancing the user
-              experience by integrating community options.
-
-            </h4>
-            <h4>The first step involves understanding why community holds a significant value within Christian practice.
-              Following this, brainstorming and testing of potential solutions are carried out. An in-depth study of
-              Glorify's existing app architecture will be conducted to seamlessly integrate the new community features.
-              These additions will undergo design refinement through multiple rounds of testing and iteration.
-
-            </h4>
-            <h4>Ultimately, the objective is to enrich the group worship experience, encouraging users to form
-              meaningful connections.</h4>
+    <!-- Arrow -->
+    <div class="wrapper">
+      <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+        <div class="Grid-cell">
+          <div class="element">
+            <h2 class="tArrow">Case study <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
           </div>
-          <div class="paddingleft">
-            <div class="widthFitContent">
-              <div class="audio-container">
-                <audio id="myAudio2">
-                  <source src="Audio_02_Intro.mp3">
-                  Your browser does not support the audio element.
-                </audio>
-                <br>
-                <button class="Glorify play-button">Play</button>
-                <div class="time-display">0:00 / 0:00</div>
+        </div>
+      </div>
+    </div>
+    <!-- Arrow -->
+    <div class="wrapper">
+      <div class="Grid Grid--full marginResponsiveGrid">
+        <div class="paddingM">
+          <img class="modal-target" src="Research_Diagram.svg" alt="Desgin Thinking Process">
+        </div>
+        <div class="paddingM">
+          <div class="rowToColumn cardGlorify shadowBox centerVer">
+            <div class="widthMax paddingM">
+              <h4> To address the current lack of social and community features, I am focused on enhancing the user
+                experience by integrating community options.
+
+              </h4>
+              <h4>The first step involves understanding why community holds a significant value within Christian
+                practice.
+                Following this, brainstorming and testing of potential solutions are carried out. An in-depth study of
+                Glorify's existing app architecture will be conducted to seamlessly integrate the new community
+                features.
+                These additions will undergo design refinement through multiple rounds of testing and iteration.
+
+              </h4>
+              <h4>Ultimately, the objective is to enrich the group worship experience, encouraging users to form
+                meaningful connections.</h4>
+            </div>
+            <div class="paddingleft">
+              <div class="widthFitContent">
+                <div class="audio-container">
+                  <audio id="myAudio2">
+                    <source src="Audio_02_Intro.mp3">
+                    Your browser does not support the audio element.
+                  </audio>
+                  <br>
+                  <button class="Glorify play-button">Play</button>
+                  <div class="time-display">0:00 / 0:00</div>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-
-
     </div>
-
     <div class="blankHXS"></div>
-
     <div class="wrapper">
       <!-- Arrow -->
       <div class="Grid Grid--full marginResponsiveGrid">
@@ -1242,14 +1244,17 @@
             </div>
           </div>
         </div>
-        <div class="Grid Grid--full marginResponsiveGrid wrapper">
-          <div class="Grid-cell">
-            <div class="element">
-              <p class="specialTextNote colorGLORIFYBlue u-textCenter">By clustering individual observations on a
-                board,
-                patterns emerge, allowing me to quickly identify themes and make informed decisions. It simplifies
-                complex user data, facilitating a clearer understanding of user needs and preferences.
-              </p>
+        <div class="wrapper">
+
+          <div class="Grid Grid--full marginResponsiveGrid">
+            <div class="Grid-cell">
+              <div class="element">
+                <p class="specialTextNote colorGLORIFYBlue u-textCenter">By clustering individual observations on a
+                  board,
+                  patterns emerge, allowing me to quickly identify themes and make informed decisions. It simplifies
+                  complex user data, facilitating a clearer understanding of user needs and preferences.
+                </p>
+              </div>
             </div>
           </div>
         </div>
@@ -4515,22 +4520,27 @@
         </div>
       </div>
       <section id="content41">
-        <div class="Grid Grid--full marginResponsiveGrid wrapper">
-          <div class="Grid-cell">
-            <div class="element">
-              <h1> <strong class="colorGLORIFYOrange">Hi-fi Prototype </strong> </h1>
+        <div class="wrapper">
+          <div class="Grid Grid--full marginResponsiveGrid">
+            <div class="Grid-cell">
+              <div class="element">
+                <h1> <strong class="colorGLORIFYOrange">Hi-fi Prototype </strong> </h1>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Arrow -->
+        <div class="wrapper">
+          <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+            <div class="Grid-cell">
+              <div class="element">
+                <h2 class="tArrow">Overall flow <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
+              </div>
             </div>
           </div>
         </div>
         <!-- Arrow -->
-        <div class="wrapper">
-          <div class="element">
-            <h2 class="tArrow"> Overall flow<img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
-            </h2>
-          </div>
-        </div>
-        <!-- Arrow -->
-
         <div class="wrapper">
           <div class="Grid-cell">
             <img src="HiFi_GroupPrayer.png" alt="Overall flow" class="modal-target" data-bgcolor="rgba(237, 218, 204)">
@@ -4539,77 +4549,81 @@
 
 
         <div class="blankHS"></div>
-        <div class="wrapper TBcarousel Grid--center Grid Grid--full marginResponsiveGrid u-textCenter" aria-label="TBcarousel" Tabindex="0"
-          id="TBcarousel2">
-          <div class="TBslides">
-            <div class="TBslidesItem slide-1" id="slide-1" aria-label="slide 1 of 3" tabindex="0">
-              <div class="Grid Grid--gutters Grid--1of3 wrapper u-textCenter">
-                <div class="Grid-cell ">
-                  <div class="element"> <img class="widthXS" src="HiFi_GroupPrayer_QuickStartPtt.gif"
-                      alt="Quick start group prayer">
-                  </div>
+        <div class="wrapper">
 
-                </div>
-                <div class="Grid-cell">
-                  <div class="element">
-                    <div class="Grid">
-                      <img class="modal-target" src="HiFi_GroupPrayer_QuickStart.png" alt="Quick start group prayer"
-                        data-bgcolor="rgba(237, 218, 204)">
+          <div class="TBcarousel Grid--center Grid Grid--full marginResponsiveGrid u-textCenter" aria-label="TBcarousel"
+            Tabindex="0" id="TBcarousel2">
+            <div class="TBslides">
+              <div class="TBslidesItem slide-1" id="slide-1" aria-label="slide 1 of 3" tabindex="0">
+                <div class="Grid Grid--gutters Grid--1of3 wrapper u-textCenter">
+                  <div class="Grid-cell ">
+                    <div class="element"> <img class="widthXS" src="HiFi_GroupPrayer_QuickStartPtt.gif"
+                        alt="Quick start group prayer">
+                    </div>
+
+                  </div>
+                  <div class="Grid-cell">
+                    <div class="element">
+                      <div class="Grid">
+                        <img class="modal-target" src="HiFi_GroupPrayer_QuickStart.png" alt="Quick start group prayer"
+                          data-bgcolor="rgba(237, 218, 204)">
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="TBslidesItem slide-2" id="slide-2" aria-label="slide 2 of 3" tabindex="0">
-              <div class="Grid Grid--gutters Grid--1of3 wrapper u-textCenter">
-                <div class="Grid-cell ">
-                  <div class="element"> <img class="widthXS" src="HiFi_GroupPrayer_CustomPtt.gif"
-                      alt="Customized group prayer">
-                  </div>
-
-                </div>
-                <div class="Grid-cell">
-                  <div class="element">
-                    <div class="Grid">
-                      <img class="modal-target" src="HiFi_GroupPrayer_Custom.png" alt="Customized group prayer"
-                        data-bgcolor=" rgba(237, 218, 204)">
+              <div class="TBslidesItem slide-2" id="slide-2" aria-label="slide 2 of 3" tabindex="0">
+                <div class="Grid Grid--gutters Grid--1of3 wrapper u-textCenter">
+                  <div class="Grid-cell ">
+                    <div class="element"> <img class="widthXS" src="HiFi_GroupPrayer_CustomPtt.gif"
+                        alt="Customized group prayer">
                     </div>
-                  </div>
 
+                  </div>
+                  <div class="Grid-cell">
+                    <div class="element">
+                      <div class="Grid">
+                        <img class="modal-target" src="HiFi_GroupPrayer_Custom.png" alt="Customized group prayer"
+                          data-bgcolor=" rgba(237, 218, 204)">
+                      </div>
+                    </div>
+
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="TBslidesItem slide-3" id="slide-3" aria-label="slide 3 of 3" tabindex="0">
-              <div class="Grid Grid--gutters Grid--1of3 wrapper u-textCenter">
-                <div class="Grid-cell ">
-                  <div class="element"> <img class="widthXS" src="HiFi_GroupPrayer_JoinPtt.gif" alt="Join group prayer">
-                  </div>
+              <div class="TBslidesItem slide-3" id="slide-3" aria-label="slide 3 of 3" tabindex="0">
+                <div class="Grid Grid--gutters Grid--1of3 wrapper u-textCenter">
+                  <div class="Grid-cell ">
+                    <div class="element"> <img class="widthXS" src="HiFi_GroupPrayer_JoinPtt.gif"
+                        alt="Join group prayer">
+                    </div>
 
-                </div>
-                <div class="Grid-cell">
-                  <div class="element">
-                    <div class="Grid">
-                      <img class="modal-target" src="HiFi_GroupPrayer_Join.png" alt="Join group prayer" data-bgcolor="
+                  </div>
+                  <div class="Grid-cell">
+                    <div class="element">
+                      <div class="Grid">
+                        <img class="modal-target" src="HiFi_GroupPrayer_Join.png" alt="Join group prayer" data-bgcolor="
                         rgba(237, 218, 204)">
+                      </div>
                     </div>
-                  </div>
 
+                  </div>
                 </div>
               </div>
             </div>
+            <div class="TBcarouselNav Grid-cell">
+              <a class="TBsliderNav" aria-label="Go to slide 1">
+                <div>Quick start</div>
+              </a>
+              <a class="TBsliderNav" aria-label="Go to slide 2">
+                <div>Customized </div>
+              </a>
+              <a class="TBsliderNav" aria-label="Go to slide 3">
+                <div>Join</div>
+              </a>
+            </div>
+            <div class="blankHS"></div>
           </div>
-          <div class="TBcarouselNav Grid-cell">
-            <a class="TBsliderNav" aria-label="Go to slide 1">
-              <div>Quick start</div>
-            </a>
-            <a class="TBsliderNav" aria-label="Go to slide 2">
-              <div>Customized </div>
-            </a>
-            <a class="TBsliderNav" aria-label="Go to slide 3">
-              <div>Join</div>
-            </a>
-          </div>
-          <div class="blankHS"></div>
         </div>
       </section>
       <section id="content42" class="WhiteBgTrans">
@@ -4920,11 +4934,16 @@
               </div>
             </div>
           </div>
+
           <!-- Arrow -->
           <div class="wrapper">
-            <div class="element">
-              <h2 class="tArrow">Group Prayer Experience Comparision <img class="seArrow" src="../icon/arrow-se.svg"
-                  alt="icon arrow"></h2>
+            <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+              <div class="Grid-cell">
+                <div class="element">
+                  <h2 class="tArrow">Group Prayer Experience Comparision <img class="seArrow" src="../icon/arrow-se.svg"
+                      alt="icon arrow"></h2>
+                </div>
+              </div>
             </div>
           </div>
           <!-- Arrow -->
@@ -5036,12 +5055,13 @@
           </div>
 
           <!-- Arrow -->
-          <div class="Grid Grid--full marginResponsiveGrid">
-            <div class="Grid-cell">
-              <div class="element">
-                <h2 class="tArrow">What went well so far <img class="seArrow" src="../icon/arrow-se.svg"
-                    alt="icon arrow">
-                </h2>
+          <div class="wrapper">
+            <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+              <div class="Grid-cell">
+                <div class="element">
+                  <h2 class="tArrow">What went well so far <img class="seArrow" src="../icon/arrow-se.svg"
+                      alt="icon arrow"></h2>
+                </div>
               </div>
             </div>
           </div>
