--- a/index.html
+++ b/index.html
@@ -258,8 +258,12 @@
     <div class="blankHS"></div>
     <!-- Arrow -->
     <div class="wrapper">
-      <div class="element">
-        <h2 class="tArrow">Case Study <img class="seArrow" src="./icon/arrow-se.svg" alt="icon arrow"></h2>
+      <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+        <div class="Grid-cell">
+          <div class="element">
+            <h2 class="tArrow">Case Study <img class="seArrow" src="./icon/arrow-se.svg" alt="icon arrow"></h2>
+          </div>
+        </div>
       </div>
     </div>
     <!-- Arrow -->
@@ -363,14 +367,18 @@
 
     </div>
     <div class="blankHS"></div>
-    <!-- Arrow -->
-    <div class="wrapper">
-      <div class="element">
-        <h2 class="tArrow">Design System &#38; Navigation <img class="seArrow" src="./icon/arrow-se.svg"
-            alt="icon arrow"></h2>
-      </div>
-    </div>
-    <!-- Arrow -->
+
+        <!-- Arrow -->
+        <div class="wrapper">
+          <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+            <div class="Grid-cell">
+              <div class="element">
+                <h2 class="tArrow">Design System &#38; Navigation  <img class="seArrow" src="./icon/arrow-se.svg" alt="icon arrow"></h2>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Arrow -->
     <div class="blankHXS"></div>
     <div class="wrapper">
 
@@ -418,14 +426,18 @@
       </div>
     </div>
     <div class="blankHS"></div>
-    <!-- Arrow -->
-    <div class="wrapper">
-      <div class="element">
-        <h2 class="tArrow">Skills & Experiences <img class="seArrow" src="./icon/arrow-se.svg" alt="icon arrow">
-        </h2>
-      </div>
-    </div>
-    <!-- Arrow -->
+    
+        <!-- Arrow -->
+        <div class="wrapper">
+          <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+            <div class="Grid-cell">
+              <div class="element">
+                <h2 class="tArrow">Skills & Experiences <img class="seArrow" src="./icon/arrow-se.svg" alt="icon arrow"></h2>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Arrow -->
     <div class="blankHM"></div>
 
     <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
