--- a/photography/index.html
+++ b/photography/index.html
@@ -231,13 +231,20 @@
     <section id="content1">
 
       <section id="content11">
-
+        <!-- Arrow -->
         <div class="wrapper">
-          <div class="element">
-            <p class="tArrow">Pacific Grove Rocky View<img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
-            </p>
+          <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+            <div class="Grid-cell">
+              <div class="element">
+                <h2 class="tArrow">Pacific Grove Rocky View <img class="seArrow" src="../icon/arrow-se.svg"
+                    alt="icon arrow"></h2>
+              </div>
+            </div>
           </div>
         </div>
+        <!-- Arrow -->
+
+
         <div class="blankHS"></div>
         <div class="wrapper">
           <div class="Grid Grid--full marginResponsiveGrid">
@@ -308,12 +315,19 @@
       <div class="blankHM"></div>
 
       <section id="content12">
+
+        <!-- Arrow -->
         <div class="wrapper">
-          <div class="element">
-            <p class="tArrow"> Monarch Butterfly Sanctuary<img class="seArrow" src="../icon/arrow-se.svg"
-                alt="icon arrow"></p>
+          <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+            <div class="Grid-cell">
+              <div class="element">
+                <h2 class="tArrow">Monarch Butterfly Sanctuary <img class="seArrow" src="../icon/arrow-se.svg"
+                    alt="icon arrow"></h2>
+              </div>
+            </div>
           </div>
         </div>
+        <!-- Arrow -->
         <div class="blankHS"></div>
 
         <div class="wrapper">
@@ -356,12 +370,19 @@
     <div class="blankHM"></div>
     <section id="content2">
       <section id="content21">
+        <!-- Arrow -->
         <div class="wrapper">
-          <div class="element">
-            <p class="tArrow"> Yellowstone National Park<img class="seArrow" src="../icon/arrow-se.svg"
-                alt="icon arrow"></p>
+          <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+            <div class="Grid-cell">
+              <div class="element">
+                <h2 class="tArrow">Yellowstone National Park<img class="seArrow" src="../icon/arrow-se.svg"
+                    alt="icon arrow"></h2>
+              </div>
+            </div>
           </div>
         </div>
+        <!-- Arrow -->
+
         <div class="blankHS"></div>
 
         <div class="wrapper">
@@ -429,11 +450,19 @@
       <hr>
       <div class="blankHM"></div>
       <section id="content22">
+        <!-- Arrow -->
         <div class="wrapper">
-          <div class="element">
-            <p class="tArrow"> Teton National Park<img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
+          <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+            <div class="Grid-cell">
+              <div class="element">
+                <h2 class="tArrow">Teton National Park<img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+                </h2>
+              </div>
+            </div>
           </div>
         </div>
+        <!-- Arrow -->
+
         <div class="blankHS"></div>
         <div class="wrapper">
           <div class="Grid Grid--full marginResponsiveGrid">
@@ -460,11 +489,19 @@
       <div class="blankHM"></div>
 
       <section id="content23">
+        <!-- Arrow -->
         <div class="wrapper">
-          <div class="element">
-            <p class="tArrow"> Donner Lake <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
+          <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+            <div class="Grid-cell">
+              <div class="element">
+                <h2 class="tArrow">Donner Lake<img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+                </h2>
+              </div>
+            </div>
           </div>
         </div>
+        <!-- Arrow -->
+
         <div class="blankHS"></div>
         <div class="wrapper">
           <div class="Grid Grid--full marginResponsiveGrid">
@@ -493,12 +530,20 @@
     <div class="blankHM"></div>
     <section id="content3">
       <section id="content31">
+        <!-- Arrow -->
         <div class="wrapper">
-          <div class="element">
-            <p class="tArrow">Bosque Del Apache National Wildlife Refuge <img class="seArrow" src="../icon/arrow-se.svg"
-                alt="icon arrow"></p>
+          <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+            <div class="Grid-cell">
+              <div class="element">
+                <h2 class="tArrow">Bosque Del Apache National Wildlife Refuge<img class="seArrow"
+                    src="../icon/arrow-se.svg" alt="icon arrow">
+                </h2>
+              </div>
+            </div>
           </div>
         </div>
+        <!-- Arrow -->
+
         <div class="blankHS"></div>
         <div class="wrapper">
           <div class="Grid Grid--gutters Grid--cols-2">
@@ -559,12 +604,20 @@
       <hr>
       <div class="blankHM"></div>
       <section id="content32">
+        <!-- Arrow -->
         <div class="wrapper">
-          <div class="element">
-            <p class="tArrow">Sacramento National Wildlife Refuge<img class="seArrow" src="../icon/arrow-se.svg"
-                alt="icon arrow"></p>
+          <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+            <div class="Grid-cell">
+              <div class="element">
+                <h2 class="tArrow">Sacramento National Wildlife Refuge<img class="seArrow" src="../icon/arrow-se.svg"
+                    alt="icon arrow">
+                </h2>
+              </div>
+            </div>
           </div>
         </div>
+        <!-- Arrow -->
+
         <div class="blankHS"></div>
 
         <div class="wrapper">
@@ -625,12 +678,20 @@
       </section>
 
       <section id="content33">
+        <!-- Arrow -->
         <div class="wrapper">
-          <div class="element">
-            <p class="tArrow">White Sands National Monument <img class="seArrow" src="../icon/arrow-se.svg"
-                alt="icon arrow"></p>
+          <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+            <div class="Grid-cell">
+              <div class="element">
+                <h2 class="tArrow">White Sands National Monument<img class="seArrow" src="../icon/arrow-se.svg"
+                    alt="icon arrow">
+                </h2>
+              </div>
+            </div>
           </div>
         </div>
+        <!-- Arrow -->
+
         <div class="blankHS"></div>
         <div class="wrapper">
           <div class="Grid Grid--gutters Grid--1of2 Grid--center">
@@ -758,12 +819,20 @@
       <hr>
       <div class="blankHM"></div>
       <section id="content34">
+        <!-- Arrow -->
         <div class="wrapper">
-          <div class="element">
-            <p class="tArrow"> Taos Pueblo Indian Reservation <img class="seArrow" src="../icon/arrow-se.svg"
-                alt="icon arrow"></p>
+          <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+            <div class="Grid-cell">
+              <div class="element">
+                <h2 class="tArrow">Taos Pueblo Indian Reservation<img class="seArrow" src="../icon/arrow-se.svg"
+                    alt="icon arrow">
+                </h2>
+              </div>
+            </div>
           </div>
         </div>
+        <!-- Arrow -->
+
         <div class="blankHS"></div>
 
         <div class="wrapper">
@@ -802,16 +871,19 @@
   <div class="blankHL"></div>
 
 
-
-
   <!-- Arrow -->
   <div class="wrapper">
-    <div class="element">
-      <h2 class="tArrow">Skills & Experiences <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
-      </h2>
+    <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+      <div class="Grid-cell">
+        <div class="element">
+          <h2 class="tArrow">Skills & Experiences<img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+          </h2>
+        </div>
+      </div>
     </div>
   </div>
   <!-- Arrow -->
+
   <div class="blankHM"></div>
 
   <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
